<resources>
    <string name="app_name">ImgurMediaMvvm</string>
    <string name="comment_ph">Comment</string>
    <string name="submit_comment">Submit</string>
    <string name="views_ph">%s Views</string>
    <string name="points_ph">%s Points</string>
    <string name="blog_title">Title</string>
    <string name="by_accnturl">by %s</string>
    <string name="last_updated">Date</string>
    <string name="no_data">No Data</string>
    <string name="no_details">Unable to load details</string>
    <string name="retry">Retry</string>
    <string name="update_success">Comment Added</string>
    <string name="update_failed">Failed to add comment</string>

</resources>